--- a/templates/call.html
+++ b/templates/call.html
@@ -12,7 +12,7 @@
     <video id="remote-video" autoplay></video>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
     <script>
-        const socket = io.connect('http://' + document.domain + ':' + location.port);
+        const socket = io.connect('https://' + document.domain + ':' + location.port);
 
         const localVideo = document.getElementById('local-video');
         const remoteVideo = document.getElementById('remote-video');
