--- a/templates/call.html
+++ b/templates/call.html
@@ -69,12 +69,17 @@
 
             socket.on('answer', async data => {
                 console.log('Received answer:', data);
-                if (peerConnection.signalingState === "have-local-offer") {
-                    await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
-                } else {
-                    console.warn('Skipping setting remote description: not in have-local-offer state');
+                try {
+                    if (peerConnection.signalingState === "have-local-offer" || peerConnection.signalingState === "stable") {
+                        await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
+                    } else {
+                        console.warn('Skipping setting remote description: not in have-local-offer or stable state');
+                    }
+                } catch (error) {
+                    console.error('Error setting remote description:', error);
                 }
             });
+            
 
             socket.on('ice-candidate', async data => {
                 console.log('Received ICE candidate:', data);
