can update token online

--- a/templates/call.html
+++ b/templates/call.html
@@ -8,25 +8,15 @@
 </head>
 <body>
     <h1>Video Call</h1>
-    <video id="local-video" autoplay muted></video>
-    <video id="remote-video" autoplay></video>
+    <div id="video-containers">
+        <video id="local-video-1" autoplay muted></video>
+        <video id="remote-video-1" autoplay></video>
+        <video id="local-video-2" autoplay muted></video>
+        <video id="remote-video-2" autoplay></video>
+    </div>
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
     <script>
-        const socket = io.connect('https://' + document.domain + ':' + location.port);
-
-        const localVideo = document.getElementById('local-video');
-        const remoteVideo = document.getElementById('remote-video');
-
-        let localStream;
-        let peerConnection;
-        const servers = {
-            iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
-        };
-
-        const constraints = {
-            video: true,
-            audio: true
-        };
+        const socket = io.connect('http://' + document.domain + ':' + location.port);
 
         // Get the room name from the user or a predefined source
         const roomName = 'my-room-name';
@@ -34,17 +24,32 @@
         // Join the specified room
         socket.emit('join', { room: roomName });
 
-        // Get user media and set up video element
-        navigator.mediaDevices.getUserMedia(constraints)
-            .then(stream => {
-                localStream = stream;
-                localVideo.srcObject = stream;
-                setupPeerConnection();
-            })
-            .catch(error => console.error('Error accessing media devices.', error));
+        // Create two separate peer connections and video elements
+        const peerConnections = [];
+        const localVideos = ['local-video-1', 'local-video-2'];
+        const remoteVideos = ['remote-video-1', 'remote-video-2'];
 
-        function setupPeerConnection() {
-            peerConnection = new RTCPeerConnection(servers);
+        for (let i = 0; i < 2; i++) {
+            peerConnections[i] = new RTCPeerConnection({
+                iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
+            });
+
+            const localVideo = document.getElementById(localVideos[i]);
+            const remoteVideo = document.getElementById(remoteVideos[i]);
+
+            let localStream;
+            navigator.mediaDevices.getUserMedia({ video: true, audio: true })
+                .then(stream => {
+                    localStream = stream;
+                    localVideo.srcObject = stream;
+                    setupPeerConnection(peerConnections[i], localStream, remoteVideo, roomName);
+                })
+                .catch(error => console.error('Error accessing media devices.', error));
+        }
+
+        function setupPeerConnection(peerConnection, localStream, remoteVideo, roomName) {
+            // Set up the peer connection and event handlers as before
+            // but use the provided peerConnection, localStream, remoteVideo, and roomName parameters
 
             peerConnection.onicecandidate = event => {
                 if (event.candidate) {
@@ -70,11 +75,10 @@
                 socket.emit('answer', { answer: answer, room: roomName });
             });
 
-            socket.on('answer', async (data) => {
+            socket.on('answer', async data => {
                 console.log('Received answer:', data);
                 try {
-                    // Check the signaling state before setting the remote description
-                    if (peerConnection.signalingState === 'have-local-offer' || peerConnection.signalingState === 'stable') {
+                    if (peerConnection.signalingState === "have-local-offer" || peerConnection.signalingState === "stable") {
                         await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
                     } else {
                         console.warn('Skipping setting remote description: not in have-local-offer or stable state');
