--- a/templates/call.html
+++ b/templates/call.html
@@ -40,54 +40,51 @@
         function setupPeerConnection() {
             peerConnection = new RTCPeerConnection(servers);
 
+            // Send ICE candidates to the other peer
             peerConnection.onicecandidate = event => {
                 if (event.candidate) {
-                    console.log('Sending ICE candidate:', event.candidate);
                     socket.emit('ice-candidate', { candidate: event.candidate });
                 }
             };
 
+            // Add the remote stream to the remote video element
             peerConnection.ontrack = event => {
-                console.log('Received remote track:', event.streams[0]);
-                remoteVideo.srcObject = event.streams[0];
+                if (remoteVideo.srcObject !== event.streams[0]) {
+                    remoteVideo.srcObject = event.streams[0];
+                }
             };
 
+            // Add local stream tracks to the peer connection
             localStream.getTracks().forEach(track => {
                 peerConnection.addTrack(track, localStream);
             });
 
+            // Handle receiving an offer from another peer
             socket.on('offer', async data => {
-                console.log('Received offer:', data);
                 await peerConnection.setRemoteDescription(new RTCSessionDescription(data.offer));
                 const answer = await peerConnection.createAnswer();
                 await peerConnection.setLocalDescription(answer);
                 socket.emit('answer', { answer: answer });
             });
 
+            // Handle receiving an answer from another peer
             socket.on('answer', async data => {
-                console.log('Received answer:', data);
-                if (peerConnection.signalingState === "have-local-offer") {
-                    await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
-                } else {
-                    console.warn('Skipping setting remote description: not in have-local-offer state');
-                }
+                await peerConnection.setRemoteDescription(new RTCSessionDescription(data.answer));
             });
-            
 
+            // Handle receiving an ICE candidate from another peer
             socket.on('ice-candidate', async data => {
-                console.log('Received ICE candidate:', data);
                 try {
                     await peerConnection.addIceCandidate(new RTCIceCandidate(data.candidate));
                 } catch (e) {
-                    console.error('Error adding ICE candidate:', e);
+                    console.error('Error adding received ICE candidate:', e);
                 }
             });
 
-            // Start call by creating an offer
+            // Start the call by creating and sending an offer
             (async function() {
                 const offer = await peerConnection.createOffer();
                 await peerConnection.setLocalDescription(offer);
-                console.log('Sending offer:', offer);
                 socket.emit('offer', { offer: offer });
             })();
         }
